fix: order menu bar z-index

--- a/app/sass/pages/order.scss
+++ b/app/sass/pages/order.scss
@@ -688,7 +688,7 @@
         position: fixed;
         bottom: 0;
         width: 100%;
-        z-index: 10;
+        z-index: 15;
         background: url('../img/order/bar.svg') no-repeat center;
         padding-bottom: 2.2rem;
         background-size: contain;
